# proteinprimarytoolkit

./: LICENCE.txt  README.txt  proteinprimarytoolkit.toml  pyproject.toml
src/proteinprimarytoolkit/: __init__.py  amino_acids.py  fasta.py  pdb.py  sequence_alignment.py  structures.py  utils.py
