[project]
name = "proteins_package"
version = "1.0.0"
dependencies = [
  "requests"
]
authors = [
  { name="Joseph Dack", email="cmt563@york.ac.uk" },
]
description = "A relatively small package with support for protein primary structure analysis, amino acids data, FASTA I/0, the RCSB PDB Data API, and sequence alignment"
readme = "README.txt"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
GitHub = "https://github.com/JoeDack/proteinprimarytoolkit"
